# tc-helicon-blender-linux

./: .gitignore  BOOT.md  FindXrefs.java  Protocol.md  README.md  USB.md  ble_advertise_raw.sh  ble_scan.sh  blender-linux.pcapng  blender_ble.py  blender_midi.py  check_module.sh  check_wav.py  dcp-protocol.md  dump_firmware.py  find_xrefs.py  goxlr-patch.diff  goxlr-protocol.md  jtag-scan.sr  jtag.txt  probe_dcp.py  rebind_debug.sh  snd.patch  usbmon_blender.sh  windows-blender.pcapng
apps/: blender_page.html
blender-ctl/: .gitignore  70-tc-helicon.rules  Cargo.toml  snd-usb-audio-blender.conf
blender-ctl/crates/blender-ble/: Cargo.toml
blender-ctl/crates/blender-ble/src/: lib.rs
blender-ctl/crates/blender-midi/: Cargo.toml
blender-ctl/crates/blender-midi/src/: flash.rs  lib.rs
blender-ctl/crates/blender-proto/: Cargo.toml
blender-ctl/crates/blender-proto/src/: dcp.rs  lib.rs  param.rs  state.rs  tuple.rs
blender-ctl/crates/blender-tui/: Cargo.toml
blender-ctl/crates/blender-tui/src/: lib.rs  meter.rs
blender-ctl/crates/blender-usb/: Cargo.toml
blender-ctl/crates/blender-usb/src/: flash.rs  lib.rs
blender-ctl/src/: main.rs
emails/: Re: TC-Helicon Blender - Florian Hänel <florian.haenel@echtzeit.solutions> - 2023-02-13 1906.eml  Re: TC-Helicon Blender - Florian Hänel <florian.haenel@echtzeit.solutions> - 2023-03-10 1443.eml  Re: TC-Helicon Blender - Florian Hänel via Alsa-devel <alsa-devel@alsa-project.org> - 2023-03-10 1443.eml  Re: TC-Helicon Blender - Takashi Iwai <tiwai@suse.de> - 2023-03-08 0654.eml  (+14 more)
firmware/: Registers.md  ble-module.md  (+77 more)
(+2308 files in other folders)
