[package]
name = "blender-tui"
edition.workspace = true
version.workspace = true

[dependencies]
blender-proto = { path = "../blender-proto" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
anyhow = "1"
futures = "0.3"
log = "0.4"
pipewire = { version = "0.9", optional = true }
libspa = { version = "0.9", optional = true }
bytemuck = { version = "1", optional = true }

[features]
default = ["audio-meter"]
audio-meter = ["dep:pipewire", "dep:libspa", "dep:bytemuck"]
